...
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout_detail" />

        <TextView
            android:id="@+id/tv_detail_title_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_movie" />


        <ImageButton
            android:id="@+id/btn_share"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/circle_share"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_share_24"
            app:layout_constraintEnd_toStartOf="@+id/btn_trailer"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_title_movie" />

        <TextView
            android:id="@+id/tv_raiting_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_title_movie"
            app:layout_constraintTop_toBottomOf="@id/btn_share" />

        <TextView
            android:id="@+id/tv_raiting_value_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/bg_value"
            android:gravity="center"
            android:padding="10dp"
...
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_raiting_title"
            app:layout_constraintTop_toBottomOf="@+id/btn_share" />

        <TextView
            android:id="@+id/tv_year_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_value"
            android:gravity="center"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_title_movie"
            app:layout_constraintTop_toBottomOf="@id/tv_raiting_value_movie" />


        <TextView
            android:id="@+id/tv_genre_movie_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_value"
            android:gravity="center"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_title_movie"
            app:layout_constraintTop_toBottomOf="@id/tv_genre_movie_value" />


        <TextView
            android:id="@+id/tv_duration_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/bg_value"
            android:gravity="center"
            android:padding="5dp"
...
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_duration_value" />

        <TextView
            android:id="@+id/keteranganMovie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_value"
...
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_title_movie" />


        <ToggleButton
            android:id="@+id/iv_favorite"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/choose_favorit"
            android:textOn=""
            android:textOff=""
...
