<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".detail.DetailTvActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout_detail_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_detail_tv"
                android:layout_width="match_parent"
                app:titleTextColor="@color/white"
                app:title="Detail TV Show"
                app:navigationIcon="@drawable/ic_back"
                android:layout_height="wrap_content" />

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/iv_detail_tv"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout_detail_tv" />

        <TextView
            android:id="@+id/tv_detail_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/title"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_tv" />


        <ImageButton
            android:id="@+id/btn_share_tv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/circle_share"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_share_24"
            app:layout_constraintEnd_toStartOf="@+id/btn_trailer_tv"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_title_tv" />

        <TextView
            android:id="@+id/tv_raiting_title_tv"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_title"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/raiting"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_title_tv"
            app:layout_constraintTop_toBottomOf="@+id/btn_trailer_tv" />

        <TextView
            android:id="@+id/tv_raiting_value_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_value"
            android:padding="10dp"
            android:text="@string/raiting_value"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_raiting_title_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_raiting_title_tv"
            app:layout_constraintTop_toTopOf="@+id/tv_raiting_title_tv" />

        <TextView
            android:id="@+id/tv_genre_tv"
            android:layout_width="0dp"
            android:background="@drawable/bg_title"
            android:padding="10dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/genre"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_title_tv"
            app:layout_constraintTop_toBottomOf="@id/tv_raiting_value_tv" />


        <TextView
            android:id="@+id/tv_genre_tv_value"
            android:layout_width="0dp"
            android:background="@drawable/bg_value"
            android:padding="5dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="16dp"
            android:text="@string/genre"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_genre_tv"
            app:layout_constraintTop_toBottomOf="@id/tv_genre_tv" />

        <TextView
            android:id="@+id/tv_duration_tv"
            android:layout_width="0dp"
            android:background="@drawable/bg_title"
            android:padding="10dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/duration"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_title_tv"
            app:layout_constraintTop_toBottomOf="@id/tv_genre_tv_value" />


        <TextView
            android:id="@+id/tv_duration_tv_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="16dp"
            android:padding="5dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@drawable/bg_value"
            android:text="@string/duration_value"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_genre_tv"
            app:layout_constraintTop_toBottomOf="@id/tv_duration_tv" />

        <TextView
            android:id="@+id/tv_sinopsis_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_title"
            android:padding="10dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginEnd="16dp"
            android:text="@string/sinposis_title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_duration_tv_value" />

        <TextView
            android:id="@+id/tv_sinopsis_value_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/bg_value"
            android:padding="10dp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sinposis_title"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sinopsis_tv" />

        <ImageButton
            android:id="@+id/btn_trailer_tv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/circle_play"
            android:src="@drawable/ic_baseline_play_arrow_on"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_title_tv" />

        <ToggleButton
            android:id="@+id/iv_foavorit_tv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textOff=""
            android:textOn=""
            android:layout_marginStart="16dp"
            android:background="@drawable/choose_favorit"
            app:layout_constraintBottom_toBottomOf="@+id/btn_trailer_tv"
            app:layout_constraintStart_toEndOf="@+id/btn_trailer_tv"
            app:layout_constraintTop_toTopOf="@+id/btn_trailer_tv" />

        <ProgressBar
            android:id="@+id/progress_bar_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.255" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
