<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btn_to_favorit"
        android:title="@string/favorit"
        android:icon="@drawable/ic_favorit_false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/btn_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_person_24"
        app:showAsAction="always"/>


</menu>